Fixed two collumn page view and added css so that jqx is behind the dropdown menu

--- a/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/components/_navigation.scss
+++ b/src/dssweb.theme.magic/dssweb/theme/magic/static/sass/components/_navigation.scss
@@ -183,7 +183,7 @@
 				height: 80px; // was 100%
 				text-align: center;
 				
-				ul.dropdown {
+				ul.dropdown { z-index:800;
 					li {
 						text-align: left;
 					}
